# testing_for_fun

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yaml
testing_for_fun/: __init__.py  __main__.py
tests/unit/: conftest.py  test_init.py  test_main.py
