[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_for_fun"
description = "Silly package to demonstrate unit testing"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp",
    "lxml",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tox"
]

[project.scripts]
testing_for_fun = "testing_for_fun:main"